kubernetes/authentification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: integration-cloud-authentification:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          livenessProbe:
            initialDelaySeconds: 180
            httpGet:
              path: /actuator/health/liveness
              port: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8081        # port du service
      targetPort: 8081  # port du conteneur
  type: ClusterIP
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: authentification-hpa
#   namespace: default
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: authentification
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 50
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 60
