kubernetes/tracking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
        - name: tracking-service  
          image: 888maximewang/microservice-airbnb-tracking:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          # resources:
          #   requests:
          #     cpu: "200m"         
          #     memory: "256Mi"     
          #   limits:
          #     cpu: "500m"         
          #     memory: "512Mi"  
          readinessProbe:
            httpGet:
              path: /tracking/ping
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3   
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-service  
spec:
  selector:
    app: tracking-service
  ports:
    - protocol: TCP
      port: 80          # port du service
      targetPort: 8084  # port du conteneur
  type: ClusterIP
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: tracking-hpa
#   namespace: default
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: tracking
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 50
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 60
