kubernetes/user_management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-service
  template:
    metadata:
      labels:
        app: user-management-service
    spec:
      containers:
        - name: user-management-service
          image: 888maximewang/microservice-airbnb-user_management:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          # resources:
          #   requests:
          #     cpu: "200m"         
          #     memory: "256Mi"     
          #   limits:
          #     cpu: "500m"         
          #     memory: "512Mi"   
          readinessProbe:
            httpGet:
              path: /users/ping
              port: 8085
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  selector:
    app: user-management-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
      nodePort: 30005
  type: ClusterIP 
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: user-management-hpa
#   namespace: default
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: user-management
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 50
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 60
