kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: microservice.local
    http:
      paths:
      - path: /api/(auth/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8081
      - path: /api/(bookings/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: booking-service
            port:
              number: 8082
      - path: /api/(listings/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: listing-service
            port:
              number: 8083
      - path: /api/(tracking/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tracking-service
            port:
              number: 8084
      - path: /api/(users/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-management-service
            port:
              number: 8085
